2007-12-03  David Bateman  <dbateman@free.fr>

	* plot/plotyy.m: Use activepositionproperty property of axes
	object. Set second axis color to "none".
	* plot/__go_draw_axes__.m: Respect the activepositionproperty
	property of the axis objects.

2007-12-03  Thomas Treichl  <Thomas.Treichl@gmx.net>

	* linear-algebra/condest.m: Loosen tolerance in test.

2007-12-02  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Remove unnecessary call to
	get_data_limits.

2007-11-30  John W. Eaton  <jwe@octave.org>

	* plot/__go_draw_axes__.m: Don't compute data or axis limits.
	(get_data_limits, get_axis_limits): Delete.

2007-11-30  David Bateman  <dbateman@free.fr>

	* plot/__scatter__.m: Avoid out of bounds varargin element access.

	* plot/__go_draw_axes__.m (do_tics_1): regexprep the cell array of
	tick labels rather than one by one on the labels themselves.
	* plot/pareto.m: Bug in numerical labels fixed. Bug in search for
	95% crossing fixed.

2007-11-29  David Bateman  <dbateman@free.fr>

	* plot/pareto.m: New file.
	* plot/Makefile.in (SOURCES): Add it to the sources.
	* plot/__go_draw_axes__.m (do_tics1): Replace "%" with "%%" in tic
	marks to avoid gnuplot error about formating. More colorspec to
	after the tics.
	* plot/plotyy.m: More generic check for appropriate axis color.

	* plot/__stem__.m: New file based on old stem.m expanded to treat
	2- and 3-D.
	* plot/stem3.m: New function.
	* plot/Makefile.in (SOURCES): Add them to the sources.
	* plot/stem.m: Adapt to use __stem__.

2007-11-29  John W. Eaton  <jwe@octave.org>

	* plot/contour.m, plot/contour3.m, plot/fill.m, plot/patch.m,
	plot/surf.m, plot/surface.m: Don't return handle value unless
	requested.

	* plot/patch.m: Omit isnan check on handle returned from
	__plt_get_axis_arg__.

	* plot/__plt_get_axis_arg__.m: Don't fail if current figure exists
	but has no axes.

2007-11-28  David Bateman  <dbateman@free.fr>

	* __plt_get_axis_handle__.m: Also allow hggroup and return axes