@@ -1,10 +1,11 @@
-2007-12-02  David Bateman  <dbateman@free.fr>
+2007-12-03  David Bateman  <dbateman@free.fr>
+
+	* DLD-FUNCTIONS/regexp.cc: Use "%!testif" blocks for conditional
+	tests on PCRE.
 
 	* graphics.cc (class axes): Add color and activepositionproperty
 	properties to axis objects.
 	* graphics.h.in (class axes): ditto.
-
-2007-12-03  David Bateman  <dbateman@free.fr>
 
 	* DLD-FUNCTIONS/regexp.cc: Also include sys/types.h for regexp.
 
