@@ -1,5 +1,7 @@
 2007-12-03  David Bateman  <dbateman@free.fr>
 
+	* testfun/test.m: Add "testif" type to allow for conditional tests.
+
 	* plot/plotyy.m: Use activepositionproperty property of axes
 	object. Set second axis color to "none".
 	* plot/__go_draw_axes__.m: Respect the activepositionproperty
